# notebookux

./: .gitignore  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  components.md  examples.md  index.md  quickstart.md  release.md
examples/: basic_usage.py  easy_usage.py  notebookux_academic_example.ipynb  showcase.py
src/notebookux/: __init__.py  code_guide.py  core.py  outputs.py  parallelism.py  pipeline_guide.py  qiskit_intro.py  quantum_cq_intro.py
src/notebookux/lessons/: __init__.py
tests/: test_code_guide.py  test_core.py  test_lessons.py  test_outputs.py  test_parallelism.py  test_pipeline_guide.py  test_qiskit_intro.py  test_quantum_cq_intro.py
