[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebookux"
version = "0.2.2"
description = "Visual components for notebook-style documents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Yngrid Kalinne" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: IPython",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Education",
]
dependencies = [
  "ipython>=8.0.0",
  "markdown>=3.0",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "pytest-cov",
  "pyright",
  "ruff",
]
docs = [
  "mkdocs-jupyter",
  "mkdocs-material",
  "mkdocstrings[python]",
]
examples = [
  "matplotlib",
  "pandas",
]

[project.urls]
Homepage = "https://github.com/jyrikes/notebookux"
Repository = "https://github.com/jyrikes/notebookux"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["notebookux"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.pyright]
include = ["src", "tests"]
exclude = [
  "**/__pycache__",
  ".venv",
  "build",
  "dist",
  "site",
]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
